<resources>
    <string name="app_name">Berongsok</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_scan">New Scan</string>
    <string name="title_history">History</string>
    <string name="slogan">Empowering Waste Management Together!</string>
    <string name="sign_in_up">SIGN IN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">OR</string>
    <string name="login_with_google">Sign in with Google</string>
    <string name="register">Register Here</string>
    <string name="don_t_have_a_account">Don\'t have an account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="username">TPS Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login Here</string>
    <string name="signup_with_google">Sign up with Google</string>
    <string name="waste_recap">Waste Recap</string>
    <string name="plastic_bottle">Plastic Bottle</string>
    <string name="can">Can</string>
    <string name="glass_bottle">Glass Bottle</string>
    <string name="cardboard">Cardboard</string>
    <string name="paper">Paper</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="open_camera">Open Camera</string>
    <string name="start_scan">Start Scan</string>
    <string name="detail_history">Detail History</string>
    <string name="field">Field</string>
    <string name="value">Value</string>
    <string name="nasabah_name">Nasabah Name</string>
    <string name="waste_type">Waste Type</string>
    <string name="weight">Weight</string>
    <string name="weight_kg">Weight Kg</string>
    <string name="total_price">Total Price</string>
    <string name="create_at">Date</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="password_invalid">Password must have at least 8 characters</string>
    <string name="email_invalid">Email format is invalid</string>
    <string name="email_valid">Email is valid</string>
    <string name="password_mismatch">Password doesn\'t match</string>
    <string name="succes_regist">User Registration Success</string>
    <string name="succes_reset">Reset Password Success</string>
    <string name="succes_save">Add New Transaction Success</string>
    <string name="continue_login">Continue to Login</string>
    <string name="failed_regist">User Registration failed</string>
    <string name="retry">Retry</string>
    <string name="fields_required">All fields are required</string>
    <string name="no_transaction_history">No transaction history</string>
    <string name="balance">Balance</string>
    <string name="profile">Profile</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="enable_dark_mode">Enable Dark Mode</string>
    <string name="logout">Logout</string>
    <string name="submit">Submit</string>
    <string name="transaction_form">Transaction Form</string>
    <string name="waste_price">Waste Price</string>
    <string name="rp_0">Rp0</string>
    <string name="invalid_otp">Input 6 number OTP Code</string>
    <string name="verify">Verify</string>
    <string name="verify_your_account">Verify your Account</string>
    <string name="check_your_mail">OTP has been sent to your email. Please check your email inbox.</string>
    <string name="otp_code">OTP CODE</string>
    <string name="check_your_otp_code">You have already requested an OTP. Please check your email or try again in 5 minutes</string>
    <string name="transaction_detail">Transaction Detail</string>
    <string name="plastic_cup">Plastic Cup</string>
    <string name="transaction_history">Transaction History</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="change_password">Change Password</string>
    <string name="account">Account</string>
    <string name="send_otp">Send OTP</string>
    <string name="otp_status">OTP Status</string>
    <string name="Okay">Okay</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="empowering_waste_nmanagement_together">Empowering Waste\nManagement Together!</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="choose_or_take_a_photo_to_upload">Choose or Take a Photo to Upload</string>
    <string name="image_preview">Image Preview</string>
    <string name="button_to_profile">Button to Profile</string>
</resources>