<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    android:rowCount="3"
    android:layout_marginBottom="?attr/actionBarSize"
    tools:context=".ui.transaction.TransactionFormActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="textStart"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/transaction_form"
        android:textSize="36sp"
        android:textColor="@color/md_theme_primary"
        />

    <ImageView
        android:id="@+id/previewImageView"
        android:layout_weight="1"
        android:minHeight="200dp"
        android:layout_width="match_parent"
        android:src="@drawable/ic_place_holder"
        android:layout_height="0dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_theme_surfaceContainerHighest"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp"
        app:cornerRadius="5dp">

        <EditText
            android:layout_marginVertical="4dp"
            android:id="@+id/ed_nasabah_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/nasabah_name"
            android:autofillHints="username"
            android:inputType="text"
            android:textColorHint="@color/md_theme_primary"
            />

        <EditText
            android:layout_marginVertical="4dp"
            android:enabled="false"
            android:id="@+id/ed_waste_type"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/waste_type"
            android:autofillHints="username"
            android:inputType="text"
            android:textColorHint="@color/md_theme_primary"
            />

        <EditText
            android:enabled="false"
            android:layout_marginVertical="4dp"
            android:id="@+id/ed_waste_price"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/waste_price"
            android:autofillHints="username"
            android:inputType="text"
            android:textColorHint="@color/md_theme_primary"
            />

        <EditText
            android:layout_marginVertical="4dp"
            android:id="@+id/ed_waste_weight"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/weight_kg"
            android:autofillHints="username"
            android:inputType="numberDecimal"
            android:textColorHint="@color/md_theme_primary"
            />

        <TextView
            android:layout_marginVertical="4dp"
            android:id="@+id/ed_total_price"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/total_price"
            android:autofillHints="username"
            android:textSize="24sp"
            android:textColorHint="@color/md_theme_primary"
            />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/submit"
            app:cornerRadius="5dp" />


    </LinearLayout>

</LinearLayout>