<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:padding="24dp"
    tools:context=".ui.login.ForgotPasswordActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/md_theme_primary"
        android:textSize="36sp"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/change_password"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/md_theme_primary"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        android:text="@string/check_your_mail"/>

    <FrameLayout
        android:id="@+id/ll1"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:background="@color/md_theme_surfaceContainerHighest"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="24dp"
            app:cornerRadius="5dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.example.berongsok.ui.component.EmailEditTex
                    android:id="@+id/ed_verify_email"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    />

                <Button
                    android:id="@+id/btnSendOTP"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginVertical="24dp"
                    android:layout_marginStart="12dp"
                    android:backgroundTint="@color/md_theme_secondary"
                    app:cornerRadius="5dp"
                    android:text="@string/send_otp" />

            </LinearLayout>

            <TextView
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/md_theme_primary"
                android:textSize="24sp"
                android:text="@string/otp_code"/>

            <com.example.berongsok.ui.component.OTPEditText
                android:id="@+id/ed_verify_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />

            <com.example.berongsok.ui.component.PasswordEditText
                android:visibility="gone"
                android:id="@+id/ed_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:visibility="gone"
                android:id="@+id/confirmLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?textInputFilledStyle"
                app:errorEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_confirm_password"
                    android:hint="@string/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    android:paddingHorizontal="12dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnVerify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                app:cornerRadius="5dp"
                android:text="@string/verify" />

        </LinearLayout>


        <TextView
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal"
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/md_theme_primary"
            android:textSize="36sp"
            android:text="@string/account"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTintMode="src_atop"
            android:visibility="gone"
            />

    </FrameLayout>

</LinearLayout>