<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center_vertical"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/md_theme_primary"
        android:textSize="36sp"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/app_name"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_italic"
        android:textColor="@color/md_theme_primary"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        android:text="@string/slogan"/>

    <FrameLayout
        android:id="@+id/ll1"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:background="@color/md_theme_surfaceContainerHighest"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="24dp"
            app:cornerRadius="5dp">

            <com.example.berongsok.ui.component.EmailEditTex
                android:id="@+id/ed_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                />

            <com.example.berongsok.ui.component.PasswordEditText
                android:id="@+id/ed_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                />

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:text="@string/sign_in_up"
                app:cornerRadius="5dp" />


        </LinearLayout>

        <TextView
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal"
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/md_theme_primary"
            android:textSize="36sp"
            android:text="@string/sign_in_up"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTintMode="src_atop"
            android:visibility="gone"
            />

    </FrameLayout>


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/md_theme_primary"
        android:textSize="16sp"
        android:layout_marginVertical="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll1"
        android:textAlignment="center"
        android:text="@string/or"/>

    <Button
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:id="@+id/googlesignin_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/md_theme_primary"
        android:layout_marginTop="12dp"
        android:textSize="12sp"
        android:backgroundTint="@color/md_theme_background"
        android:drawableLeft="@drawable/ic_google"
        android:text="@string/login_with_google"
        android:textStyle="bold"
        app:cornerRadius="5dp"
        app:iconPadding="0dp"
        app:strokeColor="@color/md_theme_primary"
        app:strokeWidth="1dp"
        />

    <LinearLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/googlesignin_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginVertical="12dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/don_t_have_a_account"
            android:textColor="@color/md_theme_primary"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="4dp"
            android:gravity="center"
            android:text="@string/register"
            android:textStyle="bold"
            android:textColor="@color/md_theme_primary"
            android:textSize="14sp"
            />
    </LinearLayout>


</LinearLayout>