<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:padding="24dp"
    tools:context=".ui.register.VerifyOTPActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/md_theme_primary"
        android:textSize="36sp"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/verify_your_account"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/md_theme_primary"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        android:text="@string/check_your_mail"/>

    <FrameLayout
        android:id="@+id/ll1"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:background="@color/md_theme_surfaceContainerHighest"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="24dp"
            app:cornerRadius="5dp">

            <com.example.berongsok.ui.component.OTPEditText
                android:id="@+id/ed_verify_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                />

            <Button
                android:id="@+id/btnVerify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                app:cornerRadius="5dp"
                android:text="@string/verify" />

        </LinearLayout>

        <TextView
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal"
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/md_theme_primary"
            android:textSize="36sp"
            android:text="@string/otp_code"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTintMode="src_atop"
            android:visibility="gone"
            />

    </FrameLayout>

</LinearLayout>